@@ -1,5 +1,9 @@
 2004-05-22  Matthew Mueller  <donut@dakotacom.net>
 
+	* arch/win32/joyhh.c: fix phantom hat when used with a joystick
+	without one, since the code ignored the JOYCAPS_HASPOV flag (d1x
+	r1.5)
+
 	* arch/ogl/gr.c: fix possibility of saving incomplete .tga
 	screenshots if the entire thing wasn't written in one call to
 	write() (d1x r1.35)
